<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.mySessions.MyAttendSessionDetail">

    <data>

        <variable
            name="viewModel"
            type="com.example.sepapp.viewModel.SepSessionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/my_session_img"
            bindImageUrl="@{viewModel.selectedListSession.imageSrc}"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/session_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_session_title"
            tools:srcCompat="@tools:sample/avatars[2]" />

        <TextView
            android:id="@+id/my_session_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewModel.selectedListSession.sessionName}"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Session name" />

        <TextView
            android:id="@+id/my_speaker_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/session_speaker_text"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toEndOf="@+id/my_session_img"
            app:layout_constraintTop_toTopOf="@+id/my_session_img" />

        <TextView
            android:id="@+id/my_session_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/session_time_text"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@+id/my_speaker_label"
            app:layout_constraintTop_toBottomOf="@+id/my_speaker_label" />

        <TextView
            android:id="@+id/my_speaker_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{viewModel.selectedListSession.speaker}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@+id/my_speaker_label"
            app:layout_constraintTop_toBottomOf="@+id/my_speaker_label" />

        <TextView
            android:id="@+id/my_session_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewModel.selectedListSession.date}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@+id/my_session_time_label"
            app:layout_constraintTop_toBottomOf="@+id/my_session_time_label" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="371dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_session_img">

            <TextView
                android:id="@+id/my_session_desp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/session_description_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/my_session_desp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.selectedListSession.description}"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_session_desp_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_export_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/button_export_to_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_unregister"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <Button
            android:id="@+id/button_unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_unregister"
            app:layout_constraintEnd_toStartOf="@+id/button_export_calendar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_export_calendar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>