<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.sessionDetail.SessionDetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.sepapp.viewModel.SepSessionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/session_speaker_image"
            bindImageUrl="@{viewModel.selectedGridSession.imageSrc}"
            android:layout_width="159dp"
            android:layout_height="161dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/session_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/session_name"
            tools:src="@tools:sample/avatars[2]" />

        <TextView
            android:id="@+id/session_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewModel.selectedGridSession.sessionName}"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Session Name" />

        <TextView
            android:id="@+id/session_speaker_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/session_speaker_text"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toEndOf="@+id/session_speaker_image"
            app:layout_constraintTop_toTopOf="@+id/session_speaker_image" />

        <TextView
            android:id="@+id/session_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/session_time_text"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toEndOf="@+id/session_speaker_image"
            app:layout_constraintTop_toBottomOf="@+id/session_speaker_name_label" />

        <TextView
            android:id="@+id/speaker_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.selectedGridSession.speaker}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toEndOf="@+id/session_speaker_name_label"
            app:layout_constraintTop_toTopOf="@+id/session_speaker_name_label" />

        <TextView
            android:id="@+id/session_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.selectedGridSession.date}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toEndOf="@+id/session_time_label"
            app:layout_constraintTop_toTopOf="@+id/session_time_label" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="371dp"
            android:layout_height="228dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/session_speaker_image">

            <TextView
                android:id="@+id/session_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/session_description_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/session_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@{viewModel.selectedGridSession.description}"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@+id/session_description_title"
                app:layout_constraintTop_toBottomOf="@+id/session_description_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/attend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/button_attend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>